--- a/Blogy.WebUI/Views/Login/Index.cshtml
+++ b/Blogy.WebUI/Views/Login/Index.cshtml
@@ -25,7 +25,7 @@
     <link rel="icon" type="image/png" href="~/adminThema/fila/assets/images/favicon.png">
 
     <!-- Title -->
-    <title>Fila - Bootstrap 5 Admin Dashboard Template</title>
+    <title>Giriş Ekranı</title>
 </head>
 <body class="bg-body-bg">
 
