--- a/Blogy.WebUI/Areas/Writer/Views/Profile/Index.cshtml
+++ b/Blogy.WebUI/Areas/Writer/Views/Profile/Index.cshtml
@@ -1,9 +1,9 @@
 ﻿@model EditProfileDto
+
 @{
     ViewData["Title"] = "Index";
-    Layout = "~/Views/UserUI/Index.cshtml";
+    Layout = "~/Views/WriterUI/Index.cshtml";
 }
-
 
 <div class="main-content-container overflow-hidden">
     <div class="d-flex justify-content-between align-items-center flex-wrap gap-2 mb-4 mt-1">
@@ -186,4 +186,3 @@
 
     </div>
 </div>
-
