--- a/Blogy.WebUI/Views/Shared/Components/_GetAllinfıLoginWriterComponent/Default.cshtml
+++ b/Blogy.WebUI/Views/Shared/Components/_GetAllinfıLoginWriterComponent/Default.cshtml
@@ -2,7 +2,7 @@
 
 
 @*
-    get all info for user 
+    get all info for writer 
 *@
 
 
@@ -120,11 +120,131 @@
                             </a>
                         </div>
                     </li>
+                    <li class="header-right-item messages-item">
+                        <div class="dropdown notifications noti messages">
+                            <button class="btn btn-secondary border-0 p-0 position-relative" type="button" data-bs-toggle="dropdown" aria-expanded="false">
+                                <span class="material-symbols-outlined">mail</span>
+                                <span class="count bg-primary">5</span>
+                            </button>
+                            <div class="dropdown-menu dropdown-lg p-0 border-0 p-0 dropdown-menu-end">
+                                <div class="d-flex justify-content-between align-items-center title">
+                                    <span class="fw-medium fs-16 text-secondary">Messages <span class="fw-normal text-body fs-16">(03)</span></span>
+                                    <button class="p-0 m-0 bg-transparent border-0 fs-15 text-primary fw-medium">Mark all as read</button>
+                                </div>
+
+                                <div style="max-height: 300px;" data-simplebar>
+                                    <div class="notification-menu unseen">
+                                        <a href="chat.html" class="dropdown-item">
+                                            <div class="d-flex align-items-center">
+                                                <div class="flex-shrink-0">
+                                                    <img src="~/adminThema/fila/assets/images/user1.jpg" class="rounded-circle" style="width: 44px; height: 44px;" alt="images">
+                                                </div>
+                                                <div class="flex-grow-1 ms-10">
+                                                    <p class="fs-16 fw-medium text-secondary mb-2">Jacob Liwiski <span class="fs-14 fw-normal text-body ms-2">35 min ago</span></p>
+                                                    <span class="fs-14-5 fw-medium d-inline-block" style="line-height: 1.4;">Hey Victor! Could you please...</span>
+                                                </div>
+                                            </div>
+                                        </a>
+                                    </div>
+                                    <div class="notification-menu unseen">
+                                        <a href="chat.html" class="dropdown-item">
+                                            <div class="d-flex align-items-center">
+                                                <div class="flex-shrink-0">
+                                                    <img src="~/adminThema/fila/assets/images/user2.jpg" class="rounded-circle" style="width: 44px; height: 44px;" alt="images">
+                                                </div>
+                                                <div class="flex-grow-1 ms-10">
+                                                    <p class="fs-16 fw-medium text-secondary mb-2">Angela Carter <span class="fs-14 fw-normal text-body ms-2">1 day ago</span></p>
+                                                    <span class="fs-14-5 fw-medium d-inline-block" style="line-height: 1.4;">How are you Angela? Would you please...</span>
+                                                </div>
+                                            </div>
+                                        </a>
+                                    </div>
+                                    <div class="notification-menu">
+                                        <a href="chat.html" class="dropdown-item">
+                                            <div class="d-flex align-items-center">
+                                                <div class="flex-shrink-0">
+                                                    <img src="~/adminThema/fila/assets/images/user3.jpg" class="rounded-circle" style="width: 44px; height: 44px;" alt="images">
+                                                </div>
+                                                <div class="flex-grow-1 ms-10">
+                                                    <p class="fs-16 fw-medium text-secondary mb-2">Brad Traversy <span class="fs-14 fw-normal text-body ms-2">2 days ago</span></p>
+                                                    <span class="fs-14-5 fw-medium d-inline-block" style="line-height: 1.4;">Hey Brad Traversy! Could you please...</span>
+                                                </div>
+                                            </div>
+                                        </a>
+                                    </div>
+                                </div>
+
+                                <a href="chat.html" class="dropdown-item text-center text-primary d-block view-all fw-medium rounded-bottom-3">
+                                    <span>See All Messages</span>
+                                </a>
+                            </div>
+                        </div>
+                    </li>
+                    <li class="header-right-item">
+                        <div class="dropdown notifications noti">
+                            <button class="btn btn-secondary border-0 p-0 position-relative" type="button" data-bs-toggle="dropdown" aria-expanded="false">
+                                <span class="material-symbols-outlined">notifications</span>
+                                <span class="count">3</span>
+                            </button>
+                            <div class="dropdown-menu dropdown-lg p-0 border-0 p-0 dropdown-menu-end">
+                                <div class="d-flex justify-content-between align-items-center title">
+                                    <span class="fw-medium fs-16 text-secondary">Notifications <span class="fw-normal text-body fs-16">(03)</span></span>
+                                    <button class="p-0 m-0 bg-transparent border-0 fs-15 text-primary fw-medium">Clear All</button>
+                                </div>
+
+                                <div style="max-height: 300px;" data-simplebar>
+                                    <div class="notification-menu unseen">
+                                        <a href="notifications.html" class="dropdown-item">
+                                            <div class="d-flex align-items-center">
+                                                <div class="flex-shrink-0">
+                                                    <i class="material-symbols-outlined text-primary">sms</i>
+                                                </div>
+                                                <div class="flex-grow-1 ms-3">
+                                                    <p class="fs-16 fw-medium text-secondary">You have requested to withdrawal</p>
+                                                    <span class="fs-14 fw-medium">2 hrs ago</span>
+                                                </div>
+                                            </div>
+                                        </a>
+                                    </div>
+                                    <div class="notification-menu unseen">
+                                        <a href="notifications.html" class="dropdown-item">
+                                            <div class="d-flex align-items-center">
+                                                <div class="flex-shrink-0">
+                                                    <i class="material-symbols-outlined text-info">person</i>
+                                                </div>
+                                                <div class="flex-grow-1 ms-3">
+                                                    <p class="fs-16 fw-medium text-secondary">A new user added in Fila</p>
+                                                    <span class="fs-14 fw-medium">3 hrs ago</span>
+                                                </div>
+                                            </div>
+                                        </a>
+                                    </div>
+                                    <div class="notification-menu">
+                                        <a href="notifications.html" class="dropdown-item">
+                                            <div class="d-flex align-items-center">
+                                                <div class="flex-shrink-0">
+                                                    <i class="material-symbols-outlined text-success">mark_email_unread</i>
+                                                </div>
+                                                <div class="flex-grow-1 ms-3">
+                                                    <p class="fs-16 fw-medium text-secondary">You have requested to withdrawal</p>
+                                                    <span class="fs-14 fw-medium">1 day ago</span>
+                                                </div>
+                                            </div>
+                                        </a>
+                                    </div>
+                                </div>
+
+                                <a href="notifications.html" class="dropdown-item text-center text-primary d-block view-all fw-medium rounded-bottom-3">
+                                    <span>See All Notifications </span>
+                                </a>
+                            </div>
+                        </div>
+                    </li>
                     <li class="header-right-item">
                         <div class="dropdown admin-profile">
                             <div class="d-xxl-flex align-items-center bg-transparent border-0 text-start p-0 cursor dropdown-toggle" data-bs-toggle="dropdown">
                                 <div class="flex-shrink-0 position-relative">
-                                    <img class="rounded-circle admin-img-width-for-mobile" style="width: 40px; height: 40px;" src="@(string.IsNullOrEmpty(Model.ImageUrl) ? Url.Content("~/adminThema/fila/assets/images/admin.png") :Model.ImageUrl) " alt="admin">
+                                    <img class="rounded-circle admin-img-width-for-mobile" style="width: 40px; height: 40px;" src="@(string.IsNullOrEmpty(Model.ImageUrl) ? Url.Content("~/adminThema/fila/assets/images/admin.png") : Model.ImageUrl) " alt="admin">
                                     <span class="d-block bg-success-60 border border-2 border-white rounded-circle position-absolute end-0 bottom-0" style="width: 11px; height: 11px;"></span>
                                 </div>
                             </div>
