--- a/Blogy.WebUI/Views/WriterUI/Index.cshtml
+++ b/Blogy.WebUI/Views/WriterUI/Index.cshtml
@@ -116,7 +116,12 @@
                     </a>
                 </li>
 
-
+                <li class="menu-item">
+                    <a href="/Writer/Comment/GetCommentToMe" class="menu-link">
+                        <span class="material-symbols-outlined menu-icon">chat</span>
+                        <span class="title">Bloglarıma Gelen Yorumlar</span>
+                    </a>
+                </li>
 
 
 
